# ROS2_study

./: Dockerfile  README.md  run_docker.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_package/lib/my_package/: my_pkg
ros2_ws/install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/psub1/lib/psub1/: pub  sub
ros2_ws/install/psub1/share/psub1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
ros2_ws/install/psub1a/lib/psub1a/: pub  sub
ros2_ws/install/psub1a/share/psub1a/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/psub1b/lib/psub1b/: pub  sub
ros2_ws/install/psub1b/share/psub1b/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/pub1/lib/pub1/: pub1
ros2_ws/install/pub2/lib/pub2/: pub2
ros2_ws/log/: latest_build
ros2_ws/src/my_package/: CMakeLists.txt
ros2_ws/src/my_package/src/: my_pkg.cpp
ros2_ws/src/psub1/: CMakeLists.txt
ros2_ws/src/psub1/src/: pub.cpp  sub.cpp
ros2_ws/src/psub1a/: CMakeLists.txt
ros2_ws/src/psub1a/src/: pub.cpp  sub.cpp
ros2_ws/src/psub1b/: CMakeLists.txt  package.xml
ros2_ws/src/psub1b/src/: pub.cpp  sub.cpp
ros2_ws/src/pub1/: CMakeLists.txt
ros2_ws/src/pub1/src/: pub1.cpp
ros2_ws/src/pub1a/: CMakeLists.txt
ros2_ws/src/pub1a/src/: pub1a.cpp
ros2_ws/src/pub1b/: CMakeLists.txt
ros2_ws/src/pub1b/src/: pub1b.cpp
ros2_ws/src/pub2/: CMakeLists.txt
ros2_ws/src/pub2/src/: pub2.cpp
ros2_ws/src/pub2a/: CMakeLists.txt
ros2_ws/src/pub2a/src/: pub2a.cpp
ros2_ws/src/pub2b/: CMakeLists.txt
ros2_ws/src/pub2b/src/: pub2b.cpp
(+120 files in other folders)
